--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
 pip install python-ravencoinlib
+
+# raven.conf
+rpcuser=ravencoin
+rpcpassword=test321
+server=1
+txindex=1
+addressindex=1
+timestampindex=1
+assetindex=1
+spentindex=1
